--- a/css/style.css
+++ b/css/style.css
@@ -136,6 +136,8 @@ header {
 
 .logo img {
     max-width: 75%;
+    margin-left: 0;
+    margin-right: 0;
 }
 
 .top_header {
@@ -396,12 +398,13 @@ bottom: -50px;
 .footer_top {
     background-color: #15181d;
     padding: 70px 0;
-    padding: 75px 0 20px 0;
+    padding: 65px 0 20px 0;
 }
 
 .footer_top img {
     max-width: 100%;
     margin-bottom: 30px;
+    float: left;
 }
 
 .footer_top h4 {
@@ -1180,6 +1183,7 @@ padding-left: 0px;
 
 .grid-arr .grid-arrival figure > a .grid-img img {
     width: 85%;
+    max-width: 212px;
     margin: 0 auto;
     position: absolute;
     bottom: 0;
@@ -1294,7 +1298,7 @@ a.fill-div {
 }
 
 .top_stores .grid-img {
-    height: 40px;
+    height: 45px;
 }
 .top_stores .col-md-2{
     padding-left: 5px;
@@ -1302,6 +1306,7 @@ a.fill-div {
 }
 .top_stores .grid-arr .grid-arrival figure > a .grid-img img {
     width: 85%;
+    max-width: 200px;
     margin: 20px auto 10px auto;
     vertical-align: middle;
     position: relative;
@@ -1317,6 +1322,7 @@ a.fill-div {
     transform: translate(-50%, -50%);
     border-radius: 0px;
     width: 100%;
+    max-width: 1600px;
     height: 100%;
 }
 
@@ -1486,9 +1492,14 @@ section.top_stores .grid-arr {
 }
 
 .grid-img {
-    height: 150px;
+   /* min-height: 150px;
+    max-height: 180px;*/
+    height: auto;
 }
-
+.prodt_page .grid-img {
+    min-height: 180px;
+    max-height: 200px;
+}
 .top_stores .description h6 {
     font-size: 16px;
     margin: 0.4em 0;
@@ -1946,7 +1957,10 @@ h2.text-center.alegreya::before {
 .about_the_card {
     width: 100%;
 }
-
+.about_the_card .container{
+    width: 100%;
+    max-width: none;
+}
 .about_the_card h1 {
     color: #FFFFFF;
     position: absolute;
@@ -1999,8 +2013,10 @@ h2.text-center.alegreya::before {
 }
 
 section.menu_other_pages .container {
-    background-color: #2298d0;
     padding: 10px 10px;
+}
+section.menu_other_pages {
+    background-color: #2298d0;
 }
 
 p.about_card_head {
@@ -2043,6 +2059,7 @@ p.about_card_description {
     position: absolute;
     top: 0;
     width: 100%;
+    max-width: 1920px;
 }
 
 .submenu .nav-tabs {
@@ -2124,10 +2141,11 @@ p.about_card_description {
 .directors .grid-arr .grid-arrival figure > a .grid-img img {
     width: 95%;
     margin: 0 auto;
+    max-width: 370px;
 }
 
 .directors .grid-img {
-    height: 300px;
+    min-height: 320px;
 }
 
 .directors .grid-arrival {
