--- a/css/product.css
+++ b/css/product.css
@@ -686,7 +686,10 @@ section.shop_banner {
         padding: 0 40px;
         padding-right: 20px;
     }
-
+    .pad_l {
+        padding-right: 5px;
+        padding-left: 40px;
+    }
     .sort select {
         margin-left: 8px;
         padding-right: 15px;
