--- a/css/product_detail.css
+++ b/css/product_detail.css
@@ -166,7 +166,7 @@ padding:0;
 
 .slider {
     width:100%;
-    margin:50px auto;
+    margin:15px auto;
 }
 
 .slick-slide {
@@ -247,6 +247,7 @@ padding:0;
 }
 .open_close_tm {
     height: 110px;
+    padding-left: 25px;
 }
 .open_close_tm h3 {
     margin-top: 10px;
