--- a/css/product.css
+++ b/css/product.css
@@ -557,6 +557,18 @@ section.shop_banner {
     .adrs .cate {
         margin-left: 0px;
     }
+    .border-right.shp_rview_sec{
+        border: 0!important;
+    }
+    .shop_des_col {
+        padding-left: 10px;
+        padding-right: 10px;
+    }
+    .brd_crmb .breadcrumb {
+        background: transparent;
+        padding: 10px 20px;
+        margin-bottom: 0px;
+    }
 }
 
 @media only screen and (min-device-width : 320px) and (max-device-width : 767px) and (orientation : landscape) and (-webkit-min-device-pixel-ratio: 2) {
