--- a/css/product.css
+++ b/css/product.css
@@ -569,6 +569,9 @@ section.shop_banner {
         padding: 10px 20px;
         margin-bottom: 0px;
     }
+    .filters .accordion.mt100 {
+        margin-top: 0;
+    }
 }
 
 @media only screen and (min-device-width : 320px) and (max-device-width : 767px) and (orientation : landscape) and (-webkit-min-device-pixel-ratio: 2) {
