--- a/css/style.css
+++ b/css/style.css
@@ -127,9 +127,13 @@ header {
 .m0 {
     margin: 0;
 }
-
-
-
+img.img-responsive:hover {
+    opacity: 0.6;
+    transition: opacity 0.25s ease-in-out;
+}
+.grid-arr .grid-arrival figure > a .grid-img img:hover {
+   opacity: 1;
+}
 .logo {
     margin-top: 20px;
 }
@@ -1154,13 +1158,8 @@ padding-left: 0px;
     max-height: 180px;
 }
 .grid-arr:hover {
-    /*    border: 1px solid #E2E2E2;
-    border: 5px solid #ffffff;
-    -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.15);
-    -moz-box-shadow: 0 0 10px rgba(0, 0, 0, 0.15);
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.15);
-    padding: 0em;*/
     transform: scale(1.05);
+    transition: 0.5s;
 }
 
 .grid-arr .grid-arrival figure {
