--- a/css/style.css
+++ b/css/style.css
@@ -2334,6 +2334,9 @@ button.close{
 .modal-dialog {
     width: 835px;	
 }
+#searchModal .modal-dialog {
+    width: 700px;	
+}
 .modal-content {
     min-height: 400px;
     border-radius: 0px;
@@ -2688,12 +2691,19 @@ p.signup-policy {
 .border-bottom {
     border-bottom: 1px solid #000;
 }
-.discount .custom-select{
+.discount .custom-select {
     width: 100%;
-    padding: 10px;
+    padding: 0px 10px;
+    height: 34px;
 }
 .advanced-modal-head, .advanced-modal-body {
     padding: 0px 35px!important;
+}
+.advanced-modal-head .modal-header .close {
+    margin-top: -2px;
+    position: absolute;
+    top: 0;
+    right: 0;
 }
 .advanced-modal label input[type="radio"] {
     display: block;
@@ -2709,7 +2719,8 @@ p.signup-policy {
 }
 
 .advanced-modal button.btn.btn-default {
-    background-color: #9e9a9a;
+    background-color: #000;
+    border: 1px solid #000;
 }
 
 .advanced-modal .form-control, .advanced-modal .btn{
@@ -2722,22 +2733,52 @@ p.signup-policy {
     margin-top: 20px; 
     margin-bottom: 5px;
 }
+.search_term i.fas.fa-search {
+    color: #FFF;
+    font-size: 15px;
+}
 .advanced-modal-body form-group {
     margin-bottom: 0;
 }
 .advanced-modal-body  .submit {
     margin-bottom: 35px;
     margin-top : 30px;
-    width: 20%;
 }
-
-
-
-
-
-
-
-
+.location.form-group {
+    margin-bottom: 0px;
+}
+.radio.width_50 {
+    margin-top: 0px;
+}
+.advanced-modal-body .prc_rte {
+    height: 34px;
+}
+.advanced-modal-head.modal-header {
+    position: relative;
+} 
+.advanced-modal-head.modal-header .close {
+    margin-top: -2px;
+    position: absolute;
+    top: 0;
+    right: 0;
+    color: #000;
+} 
+.advanced-modal-head.modal-header .close span {
+    color: #000;
+} 
+.advanced-modal-body li.width_50.miles span {
+    margin-left: 10px;
+}
+.advanced-modal-body li.width_50.miles input {
+    margin-left: 10px;
+}
+.advanced-modal-body .ui-slider-horizontal {
+    height: 3px;
+}
+.advanced-modal-body .ui-slider-horizontal .ui-slider-handle {
+    top: -0.7em;
+    margin-left: -.6em;
+}
 /* Device */
 @media screen and (max-width:480px) {
     .modal-content .modal-body {
