--- a/css/product_detail.css
+++ b/css/product_detail.css
@@ -464,7 +464,7 @@ ul.pdt_det_head {
     text-decoration: none;
 }
 .pdt_det_head li.active {
-    border-bottom: 5px solid #109fc6;
+    border-bottom: 3px solid #109fc6;
 }
 .pdt_det_head li.active > a {
     color: #109fc6;
@@ -488,7 +488,7 @@ a.btn-det_link:hover {
     font-family: FontAwesome;
     float: left;
     vertical-align: middle;
-    margin-right: 20px;
+    margin-right: 10px;
     line-height: 45px;
     font-size: 12px;
     font-weight: 400;
@@ -498,7 +498,7 @@ a.btn-det_link:hover {
     font-family: FontAwesome;
     float: left;
     vertical-align: middle;
-    margin-right: 20px;
+    margin-right: 10px;
     line-height: 45px;
     font-size: 12px;
     font-weight: 400;
@@ -508,7 +508,7 @@ a.btn-det_link:hover {
 }
 
 .heighligts-body .list {
-    padding-left: 45px;
+    padding-left: 30px;
 }
 .specification-body span.left_spec {
     width: 10%;
@@ -526,15 +526,15 @@ a.btn-det_link:hover {
 
 }
 .specification-body {
-    padding-left: 30px;
+    padding-left: 10px;
 }
 .specification-body h2 {
     font-size: 20px;
     margin-top: 20px;
 }
-.description-body p {
+.description-body {
     margin-top: 20px;
-    margin-left: 30px;
+    margin-left: 10px;
 }
 .useful_link_product-body ul {
     list-style: none;
@@ -663,6 +663,29 @@ p.view_ount i.icon-thumbs-up {
     border: 0px solid #000!important;
     -webkit-box-shadow: inset 0 0px 0px rgba(0,0,0,.075);
 }
+.heighligts, .specification, .description_product, .useful_link_product, .review_box_pro_de, .review_text_pro_de {
+    margin-left: 20px;
+}
+.item_details .collapse.in {
+    overflow: auto;
+}
+.useful_link_product-body ul.list {
+    padding-left: 0px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 @media screen and (max-width:767px){
     .banr_link .col-md-6.col-sm-4.col-xs-12.pull-right.border-left{ border:0!important;   }
     .banr_link .tp_lnk a {
@@ -699,8 +722,39 @@ p.view_ount i.icon-thumbs-up {
     .pagnt .pagination>li>a, .pagination>li>span{margin-left:0;padding:0 8px}
     .pagnt .col-md-8.col-sm-4.col-xs-12,.pagnt .col-md-3.col-sm-3.col-xs-12.numbr,.lstout{padding:0;}
     .row.fl.fw.rltiv,.lstout,.row.rgt_sr{margin:0;}
-
-
+    span.share {
+        display: inline-flex;
+        margin-top: 15px;
+    }
+    .specification-body span.left_spec {
+        width: 100%;
+        float: left;
+    }
+    .specification-body span.right_spec {
+        /* float: left; */
+        width: 100%;
+    }
+    .heighligts, .specification, .description_product, .useful_link_product, .review_box_pro_de, .review_text_pro_de {
+        margin-left: 15px;
+    }
+    .review_box_pro_de .review_star, .review_box_pro_de .review_write {
+        height: 170px;
+        padding: 5px 20px;
+    }
+    .review_box_pro_de .review_per {
+        height: 225px;
+        padding: 5px 20px; 
+    }
+    .rev_search_icon {
+        border-left: 0px solid #d0d0d0;
+        padding-left: 0;
+    }
+    .rev_search_srt {
+        text-align: left!important;
+    }
+    .rev_search_texting_text {
+        margin-top: 25px;
+    }
 }
 
 @media screen and (min-width:768px) and (max-width:1024px) {
@@ -727,4 +781,10 @@ p.view_ount i.icon-thumbs-up {
     .abt_des,.container.ad_link{padding:0 30px;}
     .tp_sr .no-border{width:50%;}
 
+}
+@media screen and (min-width : 992px) and (max-width: 1024px) and (orientation:landscape) {
+    .review_per .yesno {
+        margin-top: 15px;
+        padding: 0;
+    }
 }
